# knowledge-forge

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: knowledge-proposal.yml
.github/workflows/: deploy-docs.yaml  issue-triggered-check.yaml
config/: tags.json
scripts/: llm_check.py  parse_to_json.py
src/api-design/: api_versioning_strategy_and_disruptive_changes_management.md  circuit_breaker_pattern.md  clean_architecture_domain_model_design.md  cursor_based_pagination.md  error_response_format.md  idempotency.md  rate_limiting_and_throttling.md  requestId_in_response.md  sli_and_red_metrics_collection_guide.md  sli_and_red_metrics_implementation_guide.md  sli_error_handling_best_practices.md  trace_id_generation_and_propagation.md
src/api-idempotency/: idempotency_best_practices.md
src/app-architecture/: aggregate_and_repository_design_guide.md  clean_architecture_domain_model_design.md  cqrs_architecture_design.md  value_object_design_and_implementation_guide.md
src/architecture/: exponential_backoff_with_jitter.md  graceful_shutdown_implementation_guide.md
src/cicd/: feature_toggles_pattern.md
src/collaboration/: c4_model_and_docs_as_code_standardization.md  design_doc_and_adr_management.md  pull_request_communication_guidelines.md  safe_intervention_strategy_for_existing_code.md
src/database-design/: logical_deletion_design_criteria.md  n_plus_1_query_problem_and_countermeasures.md
src/distributed-systems/: transactional_outbox_pattern.md  (+1 more)
(+19 files in other folders)
